force-app/main/default/src/objects/HealthCloudGA__RiskScoreInteraction__mdt/HealthCloudGA__RiskScoreInteraction__mdt.object-meta.xml
<CustomObject>
    <description>Lookup table with information about disease interaction scores.</description>
    <label>Risk Score Disease Interaction</label>
    <pluralLabel>Risk Score Disease Interactions</pluralLabel>
</CustomObject>