force-app/main/default/src/objects/HealthCloudGA__RiskScoreInteraction__mdt/fields/HealthCloudGA__ApplyIfDisabled__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__ApplyIfDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether condition interacts with being disabled.</description>
    <inlineHelpText>True when this additive score is applied if the patient is disabled and has additional conditions.</inlineHelpText>
    <label>Apply If Disabled</label>
    <type>Checkbox</type>
</CustomField>