force-app/main/default/src/objects/HealthCloudGA__RiskScoreInteraction__mdt/fields/HealthCloudGA__CommunityFBDualDisabled__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__CommunityFBDualDisabled__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Community FBDual Disabled</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>