force-app/main/default/src/objects/HealthCloudGA__RiskScoreInteraction__mdt/fields/HealthCloudGA__HasConditions__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__HasConditions__c</fullName>
    <label>Has Conditions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>