force-app/main/default/src/objects/HealthCloudGA__RiskScoreInteraction__mdt/fields/HealthCloudGA__InteractingConditions__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__InteractingConditions__c</fullName>
    <label>Has Interacting Conditions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>