force-app/main/default/src/objects/HealthCloudGA__RiskScoreInteraction__mdt/fields/HealthCloudGA__YearSpan__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__YearSpan__c</fullName>
    <label>Year Span</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>